updated sweatShop-informer 23.0704.0936 for tag version v0.1.3

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,6 +3,7 @@ vars:
   PROJECT_NAME:
     sh: pwd | grep -o "[^/]*$"
   REPOSITORY_NAME: stuttgart-things
+  REGISTRY: eu.gcr.io
   MODULE: github.com/{{ .REPOSITORY_NAME }}/{{ .PROJECT_NAME }}
   GIT_COMMIT:
     sh: git log -n 1 --format=%h
