--- a/helm/sweatShop-informer/values.yaml
+++ b/helm/sweatShop-informer/values.yaml
@@ -1,6 +1,5 @@
 # Default values for sweatshop-informer.
 namespace: sweatshop
-
 redis:
   enabled: true
   sentinel:
@@ -16,15 +15,15 @@ redis:
     persistence:
       enabled: false
       medium: ""
-
+  auth:
+    password: just4dev
 configmaps:
-  configuration:
+  informer:
     INFORMING_NAMESPACE: machine-shop-packer
     INFORMING_KINDS: jobs
     REDIS_SERVER: sweatshop-informer-redis-headless.sweatshop.svc.cluster.local
     REDIS_PORT: "6379"
-    REDIS_PASSWORD: Ce1jvZRoZH
-
+    REDIS_PASSWORD: just4dev
 deployment:
   name: sweatshop-informer
   labels:
@@ -48,16 +47,14 @@ deployment:
       image: eu.gcr.io/stuttgart-things/sweatshop-informer
       replicaCount: 1
       imagePullPolicy: Always
-      tag: 23.0704.1048-v0.1.7
+      tag: 23.0704.1847-v0.1.8
       securityContext:
         capabilities: {}
-
 # RBAC
 serviceAccounts:
   sweatshop-informer:
     labels:
       app: sweatshop-informer
-
 roles:
   sweatshop-informer:
     labels:
@@ -79,7 +76,6 @@ roles:
           - get
           - list
           - watch
-
 roleBindings:
   sweatshop-informer:
     labels:
@@ -92,7 +88,6 @@ roleBindings:
       - kind: ServiceAccount
         name: sweatshop-informer
         namespace: sweatshop
-
 clusterRoles:
   sweatshop-informer:
     labels:
@@ -113,7 +108,6 @@ clusterRoles:
           - get
           - list
           - watch
-
 clusterRoleBindings:
   sweatshop-informer:
     roleRef:
