updated sweatShop-informer 23.0704.1851 for tag version v0.1.9

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -92,8 +92,8 @@ tasks:
     desc: Push to registry
     deps: [build-image, package]
     cmds:
-      - helm push {{ .PROJECT_NAME }}-{{ .UPDATED_TAG_VERSION }}.tgz oci://{{ .REGISTRY }}/{{ .REPOSITORY_NAME }}
-      - rm -rf {{ .PROJECT_NAME }}-{{ .UPDATED_TAG_VERSION }}.tgz
+      - helm push {{ lower (.PROJECT_NAME)}}-{{ .UPDATED_TAG_VERSION }}.tgz oci://{{ .REGISTRY }}/{{ .REPOSITORY_NAME }}
+      - rm -rf {{ lower (.PROJECT_NAME)}}-{{ .UPDATED_TAG_VERSION }}.tgz
 
   project-init-go:
     desc: Bootstrap project
