--- a/helm/sweatshop-informer/Chart.yaml
+++ b/helm/sweatshop-informer/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-name: sweatShop-informer
+name: sweatshop-informer
 description: A Helm chart for Kubernetes
 type: application
-version: v0.1.9
-appVersion: v0.1.9
+version: v0.1.10
+appVersion: v0.1.10
 dependencies:
   - name: sthings-helm-toolkit
     version: 2.4.42
