--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -90,7 +90,7 @@ tasks:
 
   push-chart:
     desc: Push to registry
-    deps: [build-image, package]
+    deps: [build-image, package, update-deployment]
     cmds:
       - helm push {{ lower (.PROJECT_NAME) }}-{{ .UPDATED_TAG_VERSION }}.tgz oci://{{ .REGISTRY }}/{{ .REPOSITORY_NAME }}
       - rm -rf {{ lower (.PROJECT_NAME) }}-{{ .UPDATED_TAG_VERSION }}.tgz
