--- a/argocd/deployment.yaml
+++ b/argocd/deployment.yaml
@@ -1,48 +1,35 @@
-# ---
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: sweat-shop-informer-deployment
-#   namespace: argocd
-# spec:
-#   project: app
-#   destination:
-#     name: dev11
-#     namespace: sweatshop
-#   source:
-#     repoURL: eu.gcr.io/stuttgart-things
-#     chart: sweat-shop-informer
-#     targetRevision: 0.3.11
-#     plugin:
-#       name: argocd-vault-plugin-helm
-#       env:
-#         - name: HELM_VALUES
-#           value: |
-#             configmaps:
-#               yas-configuration:
-#                 PIPELINE_WORKSPACE: tekton-cd
-#             ingress:
-#               sweat-shop-informer:
-#                 hostname: yas
-#                 clusterName: dev11
-#                 domain: 4sthings.tiab.ssc.sva.de
-#                 tls:
-#                   host: yas.dev11.4sthings.tiab.ssc.sva.de
-#             customresources:
-#               yas-ingress-certificate:
-#                 spec:
-#                   commonName: yas.dev11.4sthings.tiab.ssc.sva.de
-#                   dnsNames:
-#                   - yas.dev11.4sthings.tiab.ssc.sva.de
-#                   issuerRef:
-#                     name: cluster-issuer-approle
-#             secrets:
-#               redis-connection:
-#                 secretKVs:
-#                   REDIS_SERVER: cmVkaXMtZGVwbG95bWVudC1oZWFkbGVzcy55YWNodC5zdmMuY2x1c3Rlci5sb2NhbA==
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#       - CreateNamespace=true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: sweat-shop-informer-deployment
+  namespace: argocd
+spec:
+  project: app
+  destination:
+    name: dev11
+    namespace: sweatshop
+  source:
+    repoURL: eu.gcr.io/stuttgart-things
+    chart: sweatshop-informer
+    targetRevision: v0.1.10
+    plugin:
+      name: argocd-vault-plugin-helm
+      env:
+        - name: HELM_VALUES
+          value: |
+            namespace: sweatshop
+            redis:
+              enabled: false
+            configmaps:
+              informer:
+                INFORMING_NAMESPACE: machine-shop-packer
+                INFORMING_KINDS: jobs
+                REDIS_SERVER: redis-sweatshop-deployment-headless.sweatshop-redis.svc.cluster.local
+                REDIS_PORT: "6379"
+                REDIS_PASSWORD: <path:apps/data/sweatshop#redisPassword>
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
