added service file

--- a/argocd/redis.yaml
+++ b/argocd/redis.yaml
@@ -24,7 +24,7 @@ spec:
               enabled: true
             master:
               service:
-                type: LoadBalancer
+                type: ClusterIP
               persistence:
                 enabled: false
                 medium: ""
