updated sweatShop-informer 23.0710.1016 for tag version v0.1.11

--- a/helm/sweatshop-informer/templates/config-map.yaml
+++ b/helm/sweatshop-informer/templates/config-map.yaml
@@ -1,4 +1,6 @@
+{{ if not .Values.tektonResources.enabled }}
 {{- $envVar := . -}}
 {{- range $configmapName, $configmapTpl := .Values.configmaps -}}
 {{ include "sthings-helm-toolkit.configmap" (list $envVar $configmapName $configmapTpl) }}
+{{ end -}}
 {{ end -}}
