--- a/helm/sweatshop-informer/templates/rbac/cluster-role-binding.yaml
+++ b/helm/sweatshop-informer/templates/rbac/cluster-role-binding.yaml
@@ -1,4 +1,6 @@
+{{ if not .Values.tektonResources.enabled }}
 {{- $envVar := . -}}
 {{- range $clusterRoleBindingName, $clusterRoleBinding := .Values.clusterRoleBindings -}}
 {{ include "sthings-helm-toolkit.cluster-role-binding" (list $envVar $clusterRoleBindingName $clusterRoleBinding) }}
+{{ end -}}
 {{ end -}}
