--- a/helm/sweatshop-informer/templates/rbac/role-binding.yaml
+++ b/helm/sweatshop-informer/templates/rbac/role-binding.yaml
@@ -1,4 +1,6 @@
+{{ if not .Values.tektonResources.enabled }}
 {{- $envVar := . -}}
 {{- range $roleBindingName, $roleBinding := .Values.roleBindings -}}
 {{ include "sthings-helm-toolkit.role-binding" (list $envVar $roleBindingName $roleBinding) }}
+{{ end -}}
 {{ end -}}
