--- a/helm/sweatshop-informer/templates/rbac/role.yaml
+++ b/helm/sweatshop-informer/templates/rbac/role.yaml
@@ -1,4 +1,6 @@
+{{ if not .Values.tektonResources.enabled }}
 {{- $envVar := . -}}
 {{- range $roleName, $role := .Values.roles -}}
 {{ include "sthings-helm-toolkit.role" (list $envVar $roleName $role) }}
+{{ end -}}
 {{ end -}}
