--- a/helm/sweatshop-informer/templates/rbac/service-account.yaml
+++ b/helm/sweatshop-informer/templates/rbac/service-account.yaml
@@ -1,4 +1,6 @@
+{{ if not .Values.tektonResources.enabled }}
 {{- $envVar := . -}}
 {{- range $serviceAccountName, $serviceAccount := .Values.serviceAccounts -}}
 {{ include "sthings-helm-toolkit.service-account" (list $envVar $serviceAccountName $serviceAccount) }}
+{{ end -}}
 {{ end -}}
