--- a/helm/sweatshop-informer/templates/rbac/cluster-role.yaml
+++ b/helm/sweatshop-informer/templates/rbac/cluster-role.yaml
@@ -1,4 +1,6 @@
+{{ if not .Values.tektonResources.enabled }}
 {{- $envVar := . -}}
 {{- range $clusterRoleName, $clusterRole := .Values.clusterRoles -}}
 {{ include "sthings-helm-toolkit.cluster-role" (list $envVar $clusterRoleName $clusterRole) }}
+{{ end -}}
 {{ end -}}
