--- a/helm/sweatshop-informer/Chart.yaml
+++ b/helm/sweatshop-informer/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: sweatshop-informer
 description: A Helm chart for Kubernetes
 type: application
-version: v0.1.11
-appVersion: v0.1.11
+version: v0.1.12
+appVersion: v0.1.12
 dependencies:
   - name: sthings-helm-toolkit
     version: 2.4.42
@@ -13,6 +13,7 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     condition: redis.enabled
   - name: tekton-resources
+    alias: pipelineRuns
     version: v0.47.11
     repository: oci://eu.gcr.io/stuttgart-things
     condition: tektonResources.enabled
