--- a/helm/sweatshop-informer/values.yaml
+++ b/helm/sweatshop-informer/values.yaml
@@ -1,10 +1,8 @@
 # Default values for sweatshop-informer.
 namespace: sweatshop
-
 tektonResources:
   enabled: false
-
-tekton-resources:
+pipelineRuns:
   enableRuns: true
   runs:
     buildHelmChart:
@@ -18,7 +16,7 @@ tekton-resources:
         git-revision: main
         gitWorkspaceSubdirectory: /helm/sws-i
         helm-chart-name: sweatshop-informer
-        helm-chart-tag: 0.8.15
+        helm-chart-tag: v0.1.12
         helm-chart-path: helm
         registry: scr.app.4sthings.tiab.ssc.sva.de
         working-image: "eu.gcr.io/stuttgart-things/sthings-k8s:1.127.2"
@@ -29,6 +27,31 @@ tekton-resources:
         source:
           workspaceKind: persistentVolumeClaim
           workspaceRef: helm-workspace
+        dockerconfig:
+          workspaceKind: secret
+          workspaceRef: scr-labda-vsphere
+    buildKanikoImage:
+      name: sws-informer-kaniko
+      addRandomDateToRunName: false
+      namespace: tekton-cd
+      kind: Pipeline
+      ref: build-kaniko-image
+      params:
+        gitRepoUrl: git@github.com:stuttgart-things/sweatShop-informer.git
+        git-revision: main
+        context: /kaniko/sws-informer
+        gitWorkspaceSubdirectory: /kaniko/sws-informer
+        image: scr.app.4sthings.tiab.ssc.sva.de/sweatshop/informer
+        tag: 23.0712.1200-v0.1.12
+        registry: eu.gcr.io
+        dockerfile: Dockerfile
+      workspaces:
+        ssh-credentials:
+          workspaceKind: secret
+          workspaceRef: github-ssh
+        shared-workspace:
+          workspaceKind: persistentVolumeClaim
+          workspaceRef: kaniko-workspace
         dockerconfig:
           workspaceKind: secret
           workspaceRef: scr-labda-vsphere
@@ -79,7 +102,7 @@ deployment:
       image: eu.gcr.io/stuttgart-things/sweatshop-informer
       replicaCount: 1
       imagePullPolicy: Always
-      tag: 23.0710.1016-v0.1.11
+      tag: 23.0712.1200-v0.1.12
       securityContext:
         capabilities: {}
 # RBAC
