--- a/helm/sweatshop-informer/Chart.yaml
+++ b/helm/sweatshop-informer/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: sweatshop-informer
+name: stageTime-informer
 description: A Helm chart for Kubernetes
 type: application
 version: v0.1.18
