--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -32,7 +32,7 @@ tasks:
       INFORMING_KINDS: "jobs;pipelineruns"
       INFORMING_NAMESPACES: "default;machine-shop"
 
-  push:
+  git-push:
     desc: Commit & push the module
     cmds:
       - go mod tidy
@@ -41,6 +41,14 @@ tasks:
       - git add *
       - git commit -am 'updated {{ .PROJECT_NAME }} {{ .DATE }} for tag version {{ .UPDATED_TAG_VERSION }}{{ .BRANCH }}'
       - git push
+
+  push:
+    desc: Push to registry
+    deps: [build-image, package]
+    cmds:
+      - helm push {{ lower (.PROJECT_NAME) }}-{{ .UPDATED_TAG_VERSION }}.tgz oci://{{ .REGISTRY }}/{{ .REPOSITORY_NAME }}
+      - rm -rf {{ lower (.PROJECT_NAME) }}-{{ .UPDATED_TAG_VERSION }}.tgz
+      - task: git-push
 
   lint:
     desc: Lint code
@@ -72,7 +80,7 @@ tasks:
     desc: Commit, push & tag the module
     deps: [lint, test]
     cmds:
-      - task: push
+      - task: git-push
       - rm -rf dist
       - go mod tidy
       - git pull --tags
