--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -2,13 +2,11 @@ version: 3
 vars:
   PROJECT_NAME:
     sh: pwd | grep -o "[^/]*$"
-  REPOSITORY_NAME: stuttgart-things
-  REGISTRY: eu.gcr.io
+  # REPOSITORY_NAME: stuttgart-things
+  # REGISTRY: eu.gcr.io
+  REGISTRY: scr.cd43.sthings-pve.labul.sva.de
+  REPOSITORY_NAME: stagetime-informer
   MODULE: github.com/{{ .REPOSITORY_NAME }}/{{ .PROJECT_NAME }}
-  GIT_COMMIT:
-    sh: git log -n 1 --format=%h
-  DATE:
-    sh: date +"%y.%m%d.%H%M"
   GIT_COMMIT:
     sh: git log -n 1 --format=%h
   DATE:
