--- a/helm/stagetime-informer/Chart.yaml
+++ b/helm/stagetime-informer/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-name: stageTime-informer
+name: stagetime-informer
 description: A Helm chart for Kubernetes
 type: application
-version: v0.1.23
-appVersion: v0.1.23
+version: v0.1.24
+appVersion: v0.1.24
 dependencies:
   - name: sthings-helm-toolkit
     version: 2.4.58
