--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -4,23 +4,20 @@ releases:
     installed: true
     namespace: stagetime-informer-redis
     chart: redis/redis
-    version: 17.1.4
+    version: v0.1.26
     values:
       - "env/redis-stack.yaml.gotmpl"
-
 environments:
   labul-pve-dev:
     values:
       - env/defaults.yaml
       - env/{{ .Environment.Name }}.yaml
-
 repositories:
   - name: stuttgart-things
     url: eu.gcr.io/stuttgart-things
     oci: true
   - name: redis
     url: https://charts.bitnami.com/bitnami
-
 helmDefaults:
   verify: false
   wait: false
