updated stageTime-informer 23.1203.0642 for tag version v0.1.28

--- a/helm/stagetime-informer/values.yaml
+++ b/helm/stagetime-informer/values.yaml
@@ -44,7 +44,7 @@ deployment:
       memory: 128Mi
   containers:
     stagetime-informer:
-      image: eu.gcr.io/stuttgart-things/stagetime-informer
+      image: scr.cd43.sthings-pve.labul.sva.de/stagetime-informer/stagetime-informer
       replicaCount: 1
       imagePullPolicy: Always
       tag: 23.1203.0626-v0.1.27
